minecraft docker image with more java options